feature(delete-comment):user should be able to delete his/her comment [Finishes #167727470]
